<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_explanation_payment_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/explanation_at_payment_activity"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_explanation_payment_activity" />

    <TextView
        android:id="@+id/txt_trip_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/text_extra_large"
        app:layout_constraintStart_toStartOf="@+id/txt_total_price"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_price"
        tools:text="R$ 250.50" />

    <EditText
        android:id="@+id/edt_credit_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:hint="@string/hint_credit_card_number"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_trip_price" />

    <EditText
        android:id="@+id/edt_credit_card_month"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/hint_credit_card_month"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/edt_credit_card_number"
        app:layout_constraintTop_toBottomOf="@id/edt_credit_card_number" />

    <EditText
        android:id="@+id/edt_credit_card_year"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/hint_credit_card_year"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/edt_credit_card_month"
        app:layout_constraintTop_toBottomOf="@id/edt_credit_card_number" />

    <EditText
        android:id="@+id/edt_credit_card_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/hint_cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/edt_credit_card_year"
        app:layout_constraintEnd_toEndOf="@id/edt_credit_card_number" />

    <EditText
        android:id="@+id/edt_credit_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/hint_name_in_credit_card"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="@id/edt_credit_card_cvc"
        app:layout_constraintStart_toStartOf="@id/edt_credit_card_month"
        app:layout_constraintTop_toBottomOf="@id/edt_credit_card_month" />

    <Button
        android:id="@+id/btn_purchasing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_orange"
        android:text="@string/btn_finish_payment"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/edt_credit_card_name"
        app:layout_constraintStart_toStartOf="@id/edt_credit_card_name"
        app:layout_constraintTop_toBottomOf="@id/edt_credit_card_name" />

</androidx.constraintlayout.widget.ConstraintLayout>