<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PurchaseResumeActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/banner_item_trip_height"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/congratulations"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_extra_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/txt_purchase_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/purchase_with_success"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/txt_congratulations" />

    <TextView
        android:id="@+id/txt_purchase_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/check_purchase_resume"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/img_banner_trip"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="@dimen/margin_small"
        android:contentDescription="@string/illustrative_image_from_city"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_purchase_resume"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/txt_trip_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_banner_trip"
        tools:text="@string/city_sao_paulo" />

    <TextView
        android:id="@+id/txt_trip_period"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/txt_trip_local"
        app:layout_constraintTop_toBottomOf="@+id/txt_trip_local"
        tools:text="08/12 a 10/12 de 2017" />

    <TextView
        android:id="@+id/txt_trip_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/txt_trip_period"
        app:layout_constraintTop_toBottomOf="@+id/txt_trip_period"
        tools:text="R$ 243.99" />

    <Button
        android:id="@+id/btn_back_to_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/btn_rounded_orange"
        android:text="@string/btn_back_to_list"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_trip_price" />
</androidx.constraintlayout.widget.ConstraintLayout>